--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 </div>
             </div>
             <div class="user-welcome">
-                <p>Halo, <strong>Nama Pengguna</strong></p>
+                <p>Halo, <strong>Rio4you</strong></p>
             </div>
         </header>
 
@@ -273,7 +273,7 @@
             <div class="balance-info">
                 <p>Saldo Tersedia</p>
                 <h2>Rp 2.450.000</h2>
-                <p class="account-number">***-****-1234</p>
+                <p class="account-number">083141541781</p>
             </div>
             <div class="balance-actions">
                 <button class="action-btn"><i class="fas fa-plus"></i> Top Up</button>
